tests/NormalTests/paczka2/big_fuzzy/78073620.err
Error in line 1: S204 S218 48,4
Error in line 14: HBm4KjAGA S218 55,3
Error in line 12: UG19ix S193 94,1
Error in line 18: UG19ix S204 47,7
Error in line 21: S204 S193 36,5
Error in line 36: ZNRHolte S193 2,9
Error in line 52: ZNRHolte S218 92,9
Error in line 50: S204 S218 97,0
Error in line 70: KzDE3SLKiXK S204 -1,7
Error in line 38: sA35yF S218 59,8
Error in line 79: woTUlkdbGO9 S204 40,7
Error in line 82: KzDE3SLKiXK A437 91,0
Error in line 81: woTUlkdbGO9 S218 15,7
Error in line 93: woTUlkdbGO9 A437 76,4
Error in line 95: HBm4KjAÈA S218 4,1
Error in line 67: UG19ix A437 109,6
Error in line 94: woTUlkdbGO9 S204 75,3
Error in line 91: S204 S204 12,8
Error in line 103: S204 S218 57,7
Error in line 101: KzDE3SLKiXK S204 0,3
Error in line 98: HBm4KjAGA S218 5,2
Error in line 113: HBm4KjAGA S204 41,8
Error in line 116: S204 S204 61,8
Error in line 131: ZNRHolte S193 74,7
Error in line 132: ZNRHolte A437 22,2
Error in line 128: S204 S218 0,2
Error in line 136: S204 S193 -1,2
Error in line 127: KzDE3SLKiXK S193 29,0
Error in line 106: UG19ix A437 77,0
Error in line 129: HBm4KjAGA S218 128,8
Error in line 141: UG19ix S204 38,7
Error in line 142: sA35yF S193 84,2
Error in line 148: sA35yF A437 16,7
Error in line 144: HBm4KjAGA S204 28,1
Error in line 170: woTUlkdbGO9 S193 91,0
Error in line 166: sA35yF A437 86,2
Error in line 180: sA35yF S193 15,8
Error in line 191: HBm4KjAGA A437 86,56
Error in line 179: HBm4KjAGA S218 54,6
Error in line 190: ZNRHolte S218 76,4
Error in line 188: sA35yF S204 3,8
Error in line 200: KzDE3SLKiXK S218 87,54
Error in line 193: UG19ix S204 59,5
Error in line 192: HBm4KjAGA A437 339,5
Error in line 214: HBm4KjAGA S204 59,8
Error in line 209: KzDE3SLKiXK S218 38,5
Error in line 216: KzDE3SLKiXK S204 4,7
Error in line 224: ZNRHolte S204 28,3
Error in line 238: woTUlkdbGO9 S193 ?,8
